Remove duplicate gitignore files and clean targets

--- a/init/Makefile
+++ b/init/Makefile
@@ -4,13 +4,12 @@ CFLAGS+=-Wall -Wextra -Werror -O2
 CFILES:=main.c
 OFILES:=$(patsubst %.c, %.o, $(CFILES))
 
-all: init
-init: $(OFILES)
-	$(CC) -s -o init $(OFILES)
+all: bin/init
+bin/init: $(OFILES)
+	mkdir -p bin
+	$(CC) -s -o bin/init $(OFILES)
 install: all
 	mkdir -p $(DESTDIR)/boot
-	cp init $(DESTDIR)/boot
+	cp bin/init $(DESTDIR)/boot
 format:
 	clang-format -i $(CFILES)
-clean:
-	rm -f $(OFILES) init
