--- a/sh/Makefile
+++ b/sh/Makefile
@@ -4,13 +4,12 @@ CFLAGS+=-Wall -Wextra -Werror -O2
 CFILES:=main.c
 OFILES:=$(patsubst %.c, %.o, $(CFILES))
 
-all: sh
-sh: $(OFILES)
-	$(CC) -s -o sh $(OFILES)
+all: bin/sh
+bin/sh: $(OFILES)
+	mkdir -p bin
+	$(CC) -s -o bin/sh $(OFILES)
 install: all
 	mkdir -p $(DESTDIR)/bin
-	cp sh $(DESTDIR)/bin
+	cp bin/sh $(DESTDIR)/bin
 format:
 	clang-format -i $(CFILES)
-clean:
-	rm -f $(OFILES) sh
