--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,13 @@
 sysroot
 boot
 system
-svfs.img
-lvm.img
+*.img
 os.iso
-private.key
-public.key
+*.key
+*.o
+*.d
+bin
+*.bin
+tools/toolchain
+*.tar.gz
+*.a
