--- a/loadelf/Makefile
+++ b/loadelf/Makefile
@@ -4,13 +4,12 @@ CFLAGS+=-Wall -Wextra -Werror -O2
 CFILES:=main.c
 OFILES:=$(patsubst %.c, %.o, $(CFILES))
 
-all: lelf
-lelf: $(OFILES)
-	$(CC) -s -o lelf $(OFILES) -Wl,-Ttext-segment,0x40000000
+all: bin/lelf
+bin/lelf: $(OFILES)
+	mkdir -p bin
+	$(CC) -s -o bin/lelf $(OFILES) -Wl,-Ttext-segment,0x40000000
 install: all
 	mkdir -p $(DESTDIR)/boot
-	cp lelf $(DESTDIR)/boot
+	cp bin/lelf $(DESTDIR)/boot
 format:
 	clang-format -i $(CFILES)
-clean:
-	rm -f $(OFILES) lelf
