--- a/filesystems/Makefile
+++ b/filesystems/Makefile
@@ -1,9 +1,11 @@
-CC:=x86_64-os-gcc
-OBJCOPY:=x86_64-os-objcopy
-CFLAGS+=-Wall -Wextra -Werror -O2 -MMD -Iinclude
 PROGRAMS:=bin/lvmd bin/mbrd bin/svfsd bin/tmpd bin/vfsd
 
-all: $(PROGRAMS)
+install: $(PROGRAMS)
+	cp bin/lvmd $(DESTDIR)/boot
+	cp bin/mbrd $(DESTDIR)/boot
+	cp bin/svfsd $(DESTDIR)/boot
+	cp bin/tmpd $(DESTDIR)/sbin
+	cp bin/vfsd $(DESTDIR)/boot
 .SECONDEXPANSION:
 bin/svfsd: LDFLAGS:= -lmonocypher
 $(PROGRAMS): $$(patsubst %.c, %.o, $$(wildcard $$(patsubst bin/%d, %, $$@)/*.c)) $(patsubst %.key, %.o, $(wildcard public.key))
@@ -11,11 +13,4 @@ $(PROGRAMS): $$(patsubst %.c, %.o, $$(wildcard $$(patsubst bin/%d, %, $$@)/*.c))
 	$(CC) -s -o $@ $^ $(LDFLAGS)
 %.o: %.key
 	$(OBJCOPY) -O elf64-x86-64 -I binary $< $@
-install: all
-	mkdir -p $(DESTDIR)/boot $(DESTDIR)/sbin
-	cp bin/lvmd $(DESTDIR)/boot
-	cp bin/mbrd $(DESTDIR)/boot
-	cp bin/svfsd $(DESTDIR)/boot
-	cp bin/tmpd $(DESTDIR)/sbin
-	cp bin/vfsd $(DESTDIR)/boot
 -include $(wildcard */*.d)
