--- a/loader-mb/Makefile
+++ b/loader-mb/Makefile
@@ -2,7 +2,7 @@ CC:=clang
 AS:=clang
 AR:=llvm-ar
 OBJCOPY:=llvm-objcopy
-CFLAGS:=--target=i686-elf -ffreestanding --sysroot=/dev/null -fstack-protector-strong -Wall -Wextra -Werror -fbuiltin -O2 -MMD -Iinclude -Ilibc/include
+CFLAGS+=--target=i686-elf -ffreestanding --sysroot=/dev/null -fstack-protector-strong -fbuiltin -Ilibc/include
 ASFLAGS:=--target=i686-elf -c
 
 LIBC:=$(patsubst %.c, %.o, $(wildcard libc/*/*.c))
@@ -11,15 +11,11 @@ CFILES:=main.c $(wildcard */*.c)
 PUBKEY:=$(wildcard public.key)
 OFILES:=$(patsubst %.c, %.o, $(CFILES)) $(patsubst %.s, %.o, $(SFILES)) $(patsubst %.key, %.o, $(PUBKEY))
 
-all: loader.bin
-loader.bin: libc.a $(OFILES)
-	$(CC) --target=i686-elf -static -nostdlib -s -T link.ld -o loader.bin $(OFILES) libc.a
+$(DESTDIR)/boot/loader.bin: $(OFILES) libc.a
+	$(CC) --target=i686-elf -static -nostdlib -s -T link.ld -o $@ $^
 %.o: %.key
 	$(OBJCOPY) -O elf32-i386 -I binary $< $@
 $(LIBC): CFLAGS+=-fno-builtin
 libc.a: $(LIBC)
 	$(AR) --format=gnu rc libc.a $(LIBC)
-install: all
-	mkdir -p $(DESTDIR)/boot
-	cp loader.bin $(DESTDIR)/boot
 -include $(OFILES:.o=.d)
