--- a/coreutils/Makefile
+++ b/coreutils/Makefile
@@ -1,11 +1,4 @@
-CC:=x86_64-os-gcc
-CFLAGS+=-Wall -Wextra -Werror -O2
-PROGRAMS:=$(patsubst %.c, bin/%, $(wildcard *.c))
+PROGRAMS:=$(patsubst %.c, $(DESTDIR)/bin/%, $(wildcard *.c))
 
-all: $(PROGRAMS)
-$(PROGRAMS): bin/%: %.o
-	mkdir -p bin
+$(PROGRAMS): $(DESTDIR)/bin/%: %.o
 	$(CC) -s -o $@ $<
-install: all
-	mkdir -p $(DESTDIR)
-	cp -r bin $(DESTDIR)
