Further clean up makefiles

--- a/coreutils/Makefile
+++ b/coreutils/Makefile
@@ -1,4 +1,5 @@
 PROGRAMS:=$(patsubst %.c, $(DESTDIR)/bin/%, $(wildcard *.c))
 
+all: $(PROGRAMS)
 $(PROGRAMS): $(DESTDIR)/bin/%: %.o
 	$(CC) -s -o $@ $<
