Implement global constructors/destructors and fix undefined behavior

--- a/libc/Makefile
+++ b/libc/Makefile
@@ -7,7 +7,7 @@ OFILES:=$(patsubst %.c, %.o, $(CFILES)) $(patsubst %.s, %.o, $(SFILES))
 install: $(DESTDIR)/lib/libc.a crt0.o
 	cp crt0.o $(DESTDIR)/lib
 $(DESTDIR)/lib/libc.a: $(OFILES)
-	$(AR) rc $@ $(OFILES)
+	$(AR) rcD $@ $(OFILES)
 install-headers:
 	mkdir -p $(DESTDIR)/usr/include/__/freestanding
 	cp -r include $(DESTDIR)/usr
