--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y qemu-system-x86 llvm
+          sudo apt-get install -y qemu-system-x86 llvm lld
           sudo apt-get remove -y grub-efi-amd64-bin
       - name: Checkout
         uses: actions/checkout@v2
@@ -114,7 +114,7 @@ jobs:
     needs: toolchain
     steps:
       - name: Install dependencies
-        run: sudo apt-get update && sudo apt-get install -y clang-tools llvm
+        run: sudo apt-get update && sudo apt-get install -y clang-tools llvm lld
       - name: Checkout
         uses: actions/checkout@v2
         with:
