CI: Also build on macOS

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,13 @@ name: CI
 on: [push, pull_request]
 jobs:
   toolchain:
-    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        os: [ubuntu-20.04, macos-10.15]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Install dependencies
+        if: ${{ matrix.os == 'ubuntu-20.04' }}
         run: sudo apt-get update && sudo apt-get install -y libmpc-dev libmpfr-dev
       - name: Checkout
         uses: actions/checkout@v2
@@ -14,7 +18,7 @@ jobs:
         id: cache-toolchain
         uses: actions/cache@v2
         with:
-          key: toolchain-${{ hashFiles('tools/Makefile') }}
+          key: toolchain-${{ matrix.os }}-${{ hashFiles('tools/Makefile') }}
           path: tools/toolchain
       - name: Build toolchain
         if: steps.cache-toolchain.outputs.cache-hit != 'true'
@@ -22,10 +26,14 @@ jobs:
       - name: Clean toolchain directory
         run: make clean
   multiboot:
-    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        os: [ubuntu-20.04, macos-10.15]
+    runs-on: ${{ matrix.os }}
     needs: toolchain
     steps:
       - name: Install dependencies
+        if: ${{ matrix.os == 'ubuntu-20.04' }}
         run: |
           sudo apt-get update
           sudo apt-get install -y qemu-system-x86 llvm lld
@@ -42,27 +50,32 @@ jobs:
       - name: Build OS image with GRUB
         run: make build-grub -j2
       - name: Upload loader-mb
+        if: ${{ matrix.os == 'ubuntu-20.04' }}
         uses: actions/upload-artifact@v2
         with:
           name: loader-mb
           path: boot/boot/loader.bin
       - name: Upload kernel
+        if: ${{ matrix.os == 'ubuntu-20.04' }}
         uses: actions/upload-artifact@v2
         with:
           name: kernel
           path: boot/boot/kernel.bin
       - name: Upload init
+        if: ${{ matrix.os == 'ubuntu-20.04' }}
         uses: actions/upload-artifact@v2
         with:
           name: init
           path: boot/boot/init
       - name: Upload drivers
+        if: ${{ matrix.os == 'ubuntu-20.04' }}
         uses: actions/upload-artifact@v2
         with:
           name: drivers
           path: |
             boot/boot/atad
       - name: Upload servers
+        if: ${{ matrix.os == 'ubuntu-20.04' }}
         uses: actions/upload-artifact@v2
         with:
           name: servers
@@ -71,6 +84,7 @@ jobs:
             boot/boot/ipcd
             boot/boot/logd
       - name: Upload filesystems
+        if: ${{ matrix.os == 'ubuntu-20.04' }}
         uses: actions/upload-artifact@v2
         with:
           name: filesystems
@@ -79,16 +93,19 @@ jobs:
             boot/boot/svfsd
             boot/boot/vfsd
       - name: Upload loadelf
+        if: ${{ matrix.os == 'ubuntu-20.04' }}
         uses: actions/upload-artifact@v2
         with:
           name: lelf
           path: boot/boot/lelf
       - name: Upload system volume
+        if: ${{ matrix.os == 'ubuntu-20.04' }}
         uses: actions/upload-artifact@v2
         with:
           name: svfs
           path: svfs.img
       - name: Upload LVM image
+        if: ${{ matrix.os == 'ubuntu-20.04' }}
         uses: actions/upload-artifact@v2
         with:
           name: lvm
