--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04, macos-10.15]
+      fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
       - name: Install dependencies
@@ -29,6 +30,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04, macos-10.15]
+      fail-fast: false
     runs-on: ${{ matrix.os }}
     needs: toolchain
     steps:
