--- a/grub-signed.cfg
+++ b/grub-signed.cfg
@@ -20,6 +20,8 @@ menuentry "os" {
   module2 /boot/lvmd.sig lvmd.sig
   module2 /boot/mbrd mbrd
   module2 /boot/mbrd.sig mbrd.sig
+  module2 /boot/pcid pcid
+  module2 /boot/pcid.sig pcid.sig
   module2 /boot/svfsd svfsd
   module2 /boot/svfsd.sig svfsd.sig
   module2 /boot/vfsd vfsd
