--- a/grub.cfg
+++ b/grub.cfg
@@ -11,6 +11,7 @@ menuentry "os" {
   module2 /boot/logd logd
   module2 /boot/lvmd lvmd
   module2 /boot/mbrd mbrd
+  module2 /boot/pcid pcid
   module2 /boot/svfsd svfsd
   module2 /boot/vfsd vfsd
 }
