--- a/grub.cfg
+++ b/grub.cfg
@@ -2,6 +2,7 @@ set timeout=0
 
 menuentry "os" {
   multiboot2 /boot/loader.bin
+  module2 /boot/acpid acpid
   module2 /boot/argd argd
   module2 /boot/atad atad
   module2 /boot/init init
