--- a/grub-signed.cfg
+++ b/grub-signed.cfg
@@ -2,6 +2,8 @@ set timeout=0
 
 menuentry "os" {
   multiboot2 /boot/loader.bin
+  module2 /boot/acpid acpid
+  module2 /boot/acpid.sig acpid.sig
   module2 /boot/argd argd
   module2 /boot/argd.sig argd.sig
   module2 /boot/atad atad
