--- a/loader-mb/Makefile
+++ b/loader-mb/Makefile
@@ -15,5 +15,5 @@ $(LIBC): CFLAGS+=-fno-builtin
 $(DESTDIR)/boot/loader.bin: $(OFILES) $(LIBC)
 	$(CC) --target=i686-$(LDTARGET) -fuse-ld=lld -flto -static -nostdlib -s -T link.ld -o $@ $^
 %.o: %.key
-	$(OBJCOPY) -O elf32-i386 -I binary $< $@
+	$(OBJCOPY) -O elf32-i386 -I binary $^ $@
 -include $(OFILES:.o=.d)
