--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -5,7 +5,7 @@ OBJCOPY:=llvm-objcopy
 CFLAGS+=--target=x86_64-elf -ffreestanding --sysroot=/dev/null -fstack-protector-strong -mretpoline -mcmodel=kernel -mno-red-zone -mno-mmx -mno-sse -mno-sse2 -flto -fbuiltin -Ilibc/include
 ASFLAGS:=--target=x86_64-elf -c
 
-LIBC:=$(patsubst %.c, %.o, $(wildcard libc/*/*.c))
+LIBC:=$(patsubst %.c, %.o, $(wildcard libc/*/*.c)) $(patsubst %.s, %.o, $(wildcard libc/arch/x86_64/*.s))
 SFILES:=$(wildcard cpu/*.s)
 CFILES:=main.c $(wildcard */*.c) $(wildcard sys/syscall/*.c)
 PUBKEY:=$(wildcard public.key)
