--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - name: Install dependencies (Ubuntu)
         if: ${{ matrix.os == 'ubuntu-20.04' }}
-        run: sudo apt-get update && sudo apt-get install -y ninja
+        run: sudo apt-get update && sudo apt-get install -y ninja-build
       - name: Install dependencies (MacOS)
         if: ${{ matrix.os == 'macos-10.15' }}
         run: brew install ninja
