--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "loader-mb/libc"]
   path = loader-mb/libc
-  url = https://github.com/MSathieu/freestanding-libc
+  url = https://github.com/msathieu/freestanding-libc
 [submodule "kernel/libc"]
   path = kernel/libc
-  url = https://github.com/MSathieu/freestanding-libc
+  url = https://github.com/msathieu/freestanding-libc
 [submodule "libc/freestanding"]
   path = libc/freestanding
-  url = https://github.com/MSathieu/freestanding-libc
+  url = https://github.com/msathieu/freestanding-libc
 [submodule "acpid/lai"]
   path = acpid/lai
-  url = https://github.com/managarm/lai
+  url = https://github.com/msathieu/lai
